Revert "refactor: use protobuf instead of `jsonl` (#204)"
This reverts commit bd1fc21c4d183ae430318eb63cd0430d673a6200.